fix: z-index

--- a/packages/react-components/src/button/style/index.less
+++ b/packages/react-components/src/button/style/index.less
@@ -20,6 +20,9 @@
         background-color: @violet-1;
         color: white;
     }
+    &-icon{
+        margin-right: 8px;
+    }
     span{
         display: inline-block;
     }
