--- a/packages/react-components/src/modal/style/index.less
+++ b/packages/react-components/src/modal/style/index.less
@@ -9,6 +9,7 @@
     inset-inline-start: 0;
     inset-inline-end: 0;
     animation: modalShow 0.3s;
+    z-index: 2000;
     &-content{
         position: relative;
         width: 520px;
